docker-registry/base/docker-registry-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
  template:
    metadata:
      labels:
    spec:
      containers:
      - name: registry
        image: registry:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: registry-pvc
          mountPath: /var/lib/registry
          subPath: registry
        - name: auth-vol
          mountPath: /auth
          readOnly: true
      volumes:
        - name: registry-pvc
          persistentVolumeClaim:
            claimName: longhorn-docker-registry-pvc
        - name: auth-vol
          secret:
            secretName: auth-secret
