docker-registry/base/docker-registry-service.yml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
spec:
  selector:
  ports:
    - name: docker-port
      protocol: TCP
      port: 5000
      targetPort: 5000
